[gd_scene load_steps=5 format=3 uid="uid://hgb21nwch34j"]

[ext_resource type="PackedScene" uid="uid://bn1sfd1m0cre4" path="res://scenes/cutscenes/cutscene_message_area.tscn" id="1_b8py4"]
[ext_resource type="Script" uid="uid://e37shbmycoff" path="res://scripts/cutscenes/cutscene_ui.gd" id="1_pe67g"]
[ext_resource type="Texture2D" uid="uid://civkyeql5mvul" path="res://assets/title_popup_background_framed.png" id="3_8n7pk"]
[ext_resource type="Texture2D" uid="uid://cfrnnapfgwj0e" path="res://assets/cutscenes/dialogue_button.png" id="4_d0u6p"]

[node name="CutsceneUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pe67g")
metadata/_custom_type_script = "uid://e37shbmycoff"

[node name="BackgroundImage" type="Sprite2D" parent="."]
position = Vector2(800, 300)

[node name="LeftImage" type="Sprite2D" parent="."]
position = Vector2(400, 275)

[node name="RightImage" type="Sprite2D" parent="."]
position = Vector2(1200, 275)

[node name="CutsceneMessageArea" parent="." instance=ExtResource("1_b8py4")]
offset_top = 550.0
offset_bottom = 550.0

[node name="PreviousMessagesPopup" type="CanvasLayer" parent="."]
visible = false
offset = Vector2(100, 56)
transform = Transform2D(1, 0, 0, 1, 100, 56)

[node name="PopupBackground" type="Sprite2D" parent="PreviousMessagesPopup"]
position = Vector2(700, 394)
texture = ExtResource("3_8n7pk")

[node name="PreviousMessagesLabel" type="RichTextLabel" parent="PreviousMessagesPopup"]
offset_left = 35.0
offset_top = 35.0
offset_right = 1365.0
offset_bottom = 665.0

[node name="ClosePopupButton" type="TextureButton" parent="PreviousMessagesPopup"]
offset_left = 575.0
offset_top = 710.0
offset_right = 825.0
offset_bottom = 760.0
texture_normal = ExtResource("4_d0u6p")

[node name="Label" type="Label" parent="PreviousMessagesPopup/ClosePopupButton"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Close"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="get_new_message" from="CutsceneMessageArea" to="." method="_on_cutscene_message_area_get_new_message"]
[connection signal="show_previous_messages" from="CutsceneMessageArea" to="." method="_on_cutscene_message_area_show_previous_messages"]
[connection signal="pressed" from="PreviousMessagesPopup/ClosePopupButton" to="." method="_on_close_popup_button_pressed"]
